--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": ""
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
